--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div id="frame">
+      <h1>Chrome Dino Game- Nainvi Singh</h1>
       <canvas id="canvas"> </canvas>
     </div>
   </body>
